--- a/.github/workflows/AutoRun.yml
+++ b/.github/workflows/AutoRun.yml
@@ -1,4 +1,4 @@
-name: AutoRun
+name: 联通签到
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     types: started
   schedule:
     #格林尼治时间22：11，东八区北京时间6：11
-    - cron: 11 22 * * *
+    - cron: 30 0 * * *
 
 jobs:
   build:
